Added ResNet50 model

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         <select id="model" name="model">
             <option value="vgg16">VGGNet16</option>
             <option value="vgg19">VGGNet19</option>
+            <option value="resnet50">ResNet50</option>
         </select><br><br>
         <input type="submit" value="Predict">
     </form>
